package dz.hissab.calc;

import java.util.List;

public record CalculationDetails(double result, List<String> steps) {
}
